# TerraForge3D

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dependencies.lua  Doxyfile  LICENSE.md  Makefile  README.md  SECURITY.md  SImplyGL.rc  SImplyGL.sln  SImplyGL.vcxproj  TerraForge3D.sln  TerraGen3D.aps  TerraGen3D.rc  TerraGen3D.sln  TerraGen3D.vcxproj  TextureSettings.cpp  imgui.ini  index.html  index.md  log.txt  premake5.lua  resource.h  style.css  vert.glsl
.github/: FUNDING.yml
Binaries/: LICENSE.md  README.md  imgui.ini
Demo Savefiles/: Demo.terr3d  Node Editor Basic.terr3d  Noise Layer Example 1 Packed.terr3dpack.terr3d  PnlanetForge.terr3dpack.terr3d  Randomer.terr3d  Sea Settings.terr3d  Shader Demo Post.terr3d  Shader Demo.terr3d  ShowCase4.terr3d  terrain_color_based_on_height.glsl
Docs/: README.md
ImGuiLayouts/: imgui.ini
Scripts/: Helper.py
TerraForge3D/: NodeEditor.json  TerraForge3D.make  TerraForge3DLib.make
TerraForge3D/TerraForge3D/: CMakeLists.txt  TerraForge3D.vcxproj  WindowConfigs.ini  premake5.lua
TerraForge3D/TerraForge3D/Include/: EntryPoint.hpp  resource.h
TerraForge3D/TerraForge3D/Source/: EntryPoint.cpp  MainApplication.cpp  TerraForge3D.rc
TerraForge3D/TerraForge3DLib/: CMakeLists.txt  TerraForge3DLib.vcxproj  TerraForge3DLib.vcxproj.filters  premake5.lua
TerraForge3D/TerraForge3DLib/Include/: TerraForge3D.hpp
TerraForge3D/TerraForge3DLib/Include/Base/: Base.hpp
TerraForge3D/TerraForge3DLib/Include/Base/Core/: Application.hpp  Assert.hpp  Core.hpp  Logger.hpp  Macros.hpp  Ref.hpp  SharedPtr.hpp  UUID.hpp
TerraForge3D/TerraForge3DLib/Include/Base/DS/: DS.hpp  Mesh.hpp  Texture.hpp  Texture2D.hpp
TerraForge3D/TerraForge3DLib/Include/Base/Math/: Core.hpp  Macros.hpp  Math.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
TerraForge3D/TerraForge3DLib/Include/Base/OpenGL/: Context.hpp  Core.hpp  Framebuffer.hpp  GPUTexture.hpp  NativeMesh.hpp  NativeRenderer.hpp  OpenGL.hpp  Pipeline.hpp  Shader.hpp  SharedStorageBuffer.hpp  UIManager.hpp
TerraForge3D/TerraForge3DLib/Include/Base/Renderer/: Camera.hpp  Context.hpp  Framebuffer.hpp  GPUTexture.hpp  NativeMesh.hpp  NativeRenderer.hpp  OpenGLRenderer.hpp  Pipeline.hpp  Renderer.hpp  Shader.hpp  SharedStorageBuffer.hpp  UIManager.hpp  VulkanRenderer.hpp
TerraForge3D/TerraForge3DLib/Include/Base/Vulkan/: Buffer.hpp  ComputeDevice.hpp  Context.hpp  Core.hpp  Framebuffer.hpp  GPUTexture.hpp  GraphicsDevice.hpp  ImGuiManager.hpp  LogicalDevice.hpp  NativeMesh.hpp  NativeRender.hpp  PhysicalDevice.hpp  Pipeline.hpp  Shader.hpp  SharedStorageBuffer.hpp  SwapChain.hpp  UIManager.hpp  ValidationLayers.hpp  Vulkan.hpp
TerraForge3D/TerraForge3DLib/Include/Base/Window/: EventManager.hpp  InputSystem.hpp  KeyCodes.hpp  Window.hpp
TerraForge3D/TerraForge3DLib/Include/Data/: ApplicationState.hpp  Preferences.hpp  PreferencesEditor.hpp  ProjectManager.hpp
TerraForge3D/TerraForge3DLib/Include/Editors/: GeneratorSettings.hpp  Inspector.hpp  Viewport.hpp
TerraForge3D/TerraForge3DLib/Include/Job/: Job.hpp  JobManager.hpp  JobSystem.hpp  Thread.hpp
TerraForge3D/TerraForge3DLib/Include/Terrain/: Data.hpp  Generator.hpp  Manager.hpp  Processor.hpp
TerraForge3D/TerraForge3DLib/Include/Terrain/Generators/: Generator.hpp
TerraForge3D/TerraForge3DLib/Include/Terrain/Generators/Dummy/: CPUProcessor.hpp  Editor.hpp  Generator.hpp
TerraForge3D/TerraForge3DLib/Include/UI/: Dockspace.hpp  Editor.hpp  EditorManager.hpp  MainMenu.hpp  Menu.hpp  Modals.hpp  StartUpScreen.hpp  Style.hpp
TerraForge3D/TerraForge3DLib/Include/Utils/: Utils.hpp
TerraForge3D/TerraForge3DLib/Source/Base/Core/: Application.cpp  Assert.cpp  Logger.cpp  UUID.cpp
TerraForge3D/TerraForge3DLib/Source/Base/DS/: Mesh.cpp  MeshGenerators.cpp  Texture.cpp  Texture2D.cpp
TerraForge3D/TerraForge3DLib/Source/Base/Math/: Math.cpp
TerraForge3D/TerraForge3DLib/Source/Base/OpenGL/: Context.cpp  Framebuffer.cpp  GPUTexture.cpp  NativeRender.cpp  OpenGLContext.cpp  OpenGLGPUTexture.cpp  OpenGLNativeMesh.cpp  OpenGLNativeRender.cpp  OpenGLPipeline.cpp  OpenGLSharedStorageBuffer.cpp  Pipeline.cpp  Shader.cpp  UIManager.cpp
TerraForge3D/TerraForge3DLib/Source/Base/Renderer/: Camera.cpp  Context.cpp  Framebuffer.cpp  GPUTexture.cpp  NativeMesh.cpp  NativeRenderer.cpp  OpenGLRenderer.cpp  Pipeline.cpp  Renderer.cpp  Shader.cpp  SharedStorageBuffer.cpp  UIManager.cpp  VulkanRenderer.cpp
TerraForge3D/TerraForge3DLib/Source/Base/Vulkan/: ComputeDevice.cpp  Context.cpp  Framebuffer.cpp  GPUTexture.cpp  GraphicsDevice.cpp  ImGuiManager.cpp  NativeMesh.cpp  NativeRenderer.cpp  PhysicalDevice.cpp  Pipeline.cpp  Shader.cpp  SwapChain.cpp  UIManager.cpp  ValidationLayers.cpp  VulkanBuffer.cpp  VulkanComputeDevice.cpp  VulkanContext.cpp  VulkanGPUTexture.cpp  VulkanGraphicsDevice.cpp  VulkanLogicalDevice.cpp  VulkanNativeMesh.cpp  VulkanNativeRenderer.cpp  VulkanPhysicalDevice.cpp  VulkanPipeline.cpp  VulkanShader.cpp  VulkanSharedStorageBuffer.cpp  VulkanSwapChain.cpp  VulkanUIManager.cpp
TerraForge3D/TerraForge3DLib/Source/Base/Window/: EventManager.cpp  InputSystem.cpp  Window.cpp
TerraForge3D/TerraForge3DLib/Source/Data/: ApplicationState.cpp  Preferences.cpp  PreferencesEditor.cpp  ProjectManager.cpp
TerraForge3D/TerraForge3DLib/Source/Editors/: GeneratorSettings.cpp  Inspector.cpp  Viewport.cpp
TerraForge3D/TerraForge3DLib/Source/Job/: Job.cpp  JobManager.cpp  JobSystem.cpp  Thread.cpp
TerraForge3D/TerraForge3DLib/Source/Terrain/: TerrainData.cpp  TerrainManager.cpp
TerraForge3D/TerraForge3DLib/Source/Terrain/Generators/Dummy/: DummyCPUProcessor.cpp  DummyEditor.cpp  DummyGenerator.cpp
TerraForge3D/TerraForge3DLib/Source/UI/: Dockspace.cpp  Editor.cpp  EditorManager.cpp  MainMenu.cpp  Menu.cpp  Modals.cpp  StartUpScreen.cpp  Style.cpp
TerraForge3D/TerraForge3DLib/Source/Utils/: Utils.cpp
Themes/: White Hell.terr3d
Third Party License/: glad.md  tinyerode.md
css/: bootstrap.css  icomoon.css  light-box.css  lightcase.css  reset.css  simplegrid.css  templatemo-main.css
(+4468 files in other folders)
